--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,19 @@
+{
+  "manifest_version": 2,
+  "name": "Baked - Cookie Clicker Mod Menu",
+  "version": "1.0",
+  "description": "A mod menu for Cookie Clicker with insane features.",
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://orteil.dashnet.org/cookieclicker/*"],
+      "js": ["mod.js"]
+    }
+  ],
+  "permissions": ["activeTab"]
+}
 
